# PDI

./: Readme  project_cpu.hpp
Proyecto/Implementacion/: CMakeCache.txt  CMakeLists.txt  lti-config.cmake  time_vs_kernel.csv
Proyecto1/Ejemplo_shared_mem/: Makefile  main.cpp
Proyecto1/Informe/: bibliografia.bib  bibliografia.bib.bak  informe.aux  informe.bbl  informe.blg  informe.out  informe.tex
Proyecto1/cuda_basics/: add_block  add_block.cu  add_cuda  add_grid  add_grid.cu
Proyecto1/from_Daniel/: .~lock.time_vs_kernel_lenna.csv#  CMakeLists.txt  Makefile  cmake_install.cmake  project.cpp  project.cu  project.hpp  time_varianza.xlsx  time_vs_kernel.csv  time_vs_kernel2.xlsx  time_vs_kernel_1280.csv  time_vs_kernel_320.csv  time_vs_kernel_420.csv  time_vs_kernel_620.csv  time_vs_kernel_800.csv  time_vs_kernel_lenna.csv  time_vs_kernel_mt_missing_4k.csv  time_vs_kernel_shared_mem_4k.csv
Proyecto1/from_Daniel/src/: project.cpp  project.cu  project.hpp
Tarea2/Investigacion1/: bibliografia.bib  bibliografia.bib.bak  informe.aux  informe.bbl  informe.blg  informe.out  informe.tex
Tarea2/Investigacion1 (copy)/: bibliografia.bib  bibliografia.bib.bak  informe.aux  informe.bbl  informe.blg  informe.out  informe.tex
Tarea2/parte_OpenCV/: Makefile  tarea2_opencv  tarea2_opencv.cpp
Tarea4/: Makefile  ltiBilinearMapping.h  ltiBilinearMapping_template.h  tarea04.cpp
Tarea5/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  tarea05  tarea05.cpp  time_filter_freq.csv  time_filter_space.csv  time_sepfilter_freq.csv  time_sepfilter_space.csv
(+14 files in other folders)
